style:(theme): use class to toggle theme

--- a/src/components/molecules/ContentSection.astro
+++ b/src/components/molecules/ContentSection.astro
@@ -4,7 +4,7 @@ export interface Props {
   classes?: string;
 }
 
-const { id, classes = "" } = Astro.props;
+const { id, classes = '' } = Astro.props;
 ---
 
 <section
