--- a/src/pages/incoming.astro
+++ b/src/pages/incoming.astro
@@ -39,11 +39,7 @@ export const prerender = true;
 ---
 
 <!DOCTYPE html>
-<html
-  lang="fr"
-  class="font-display motion-safe:scroll-smooth"
-  data-theme="light"
->
+<html lang="fr" class="font-display motion-safe:scroll-smooth">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
