--- a/src/components/atoms/ThemeSwitcher.astro
+++ b/src/components/atoms/ThemeSwitcher.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "astro-icon";
+import { Icon } from 'astro-icon';
 ---
 
 <button
@@ -18,35 +18,41 @@ import { Icon } from "astro-icon";
 </button>
 
 <script>
-  import invariant from "tiny-invariant";
+  import invariant from 'tiny-invariant';
 
-  const themes = ["light", "dark"];
-  const button = document.querySelector("#theme-switcher");
-  invariant(button, "button should not be null");
+  const themes = ['light', 'dark'] as const;
+  const button = document.querySelector('#theme-switcher');
+  invariant(button, 'button should not be null');
 
-  const getThemeCurrent = () => document.documentElement.dataset.theme;
-  const getThemeNext = () => {
-    const themeCurrent = getThemeCurrent();
-    invariant(themeCurrent, "themeCurrent should not be undefined");
+  const getCurrentTheme = () => {
+    const classList = document.documentElement.classList;
+    return themes.find((theme) => classList.contains(theme)) ?? 'light';
+  };
+
+  const getNextTheme = () => {
+    const themeCurrent = getCurrentTheme();
+    invariant(themeCurrent, 'themeCurrent should not be undefined');
     const indexThemeCurrent = themes.indexOf(themeCurrent);
     return themes[(indexThemeCurrent + 1) % themes.length];
   };
 
   const updateIcon = () => {
-    const themeCurrent = getThemeCurrent();
+    const themeCurrent = getCurrentTheme();
     document
       .querySelector(`#icon-theme-${themeCurrent}`)
-      ?.classList.add("hidden");
-    const themeNext = getThemeNext();
+      ?.classList.add('hidden');
+    const themeNext = getNextTheme();
     document
       .querySelector(`#icon-theme-${themeNext}`)
-      ?.classList.remove("hidden");
+      ?.classList.remove('hidden');
   };
 
-  button.addEventListener("click", () => {
-    const themeNext = getThemeNext();
-    document.documentElement.dataset.theme = themeNext;
-    localStorage.setItem("theme", themeNext);
+  button.addEventListener('click', () => {
+    const themeNext = getNextTheme();
+    const classList = document.documentElement.classList;
+    classList.remove(getCurrentTheme());
+    classList.add(themeNext);
+    localStorage.setItem('theme', themeNext);
     updateIcon();
   });
 
