--- a/src/components/organisms/Products.astro
+++ b/src/components/organisms/Products.astro
@@ -1,21 +1,21 @@
 ---
-import { Image } from "astro:assets";
-import ContentSection from "~/components/molecules/ContentSection.astro";
+import { Image } from 'astro:assets';
+import ContentSection from '~/components/molecules/ContentSection.astro';
 
-import loreal from "~/assets/products/loreal.png";
-import ghd from "~/assets/products/ghd.png";
-import Link from "~/components/atoms/Link.svelte";
+import loreal from '~/assets/products/loreal.png';
+import ghd from '~/assets/products/ghd.png';
+import Link from '~/components/atoms/Link.svelte';
 
 const products = [
   {
     name: "L'Oréal",
     image: loreal,
-    href: "https://www.lorealprofessionnel.fr/",
+    href: 'https://www.lorealprofessionnel.fr/',
   },
   {
-    name: "GHD",
+    name: 'GHD',
     image: ghd,
-    href: "https://www.ghdhair.com/fr",
+    href: 'https://www.ghdhair.com/fr',
   },
 ];
 ---
@@ -33,13 +33,13 @@ const products = [
       products.map((_) => (
         <Link href={_.href} newTab>
           <Image
-            class="pointer-events-none h-full w-full object-cover"
+            class="pointer-events-none h-full w-full rounded-md object-cover dark:bg-offset"
             src={_.image}
             alt={_.name}
             width={_.image.width / 2}
             densities={[1.5, 2]}
             sizes="(min-width: 0px) and (max-width: 480px) 480px, (min-width: 481px) 600px, 100vw"
-            quality={"hight"}
+            quality={'hight'}
             format="png"
           />
         </Link>
