--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,8 @@
 ---
-import Link from "~/components/atoms/Link.svelte";
-import Layout from "~/components/organisms/layout/Layout.astro";
+import Link from '~/components/atoms/Link.svelte';
+import Layout from '~/components/organisms/layout/Layout.astro';
 export const prerender = true;
-return Astro.redirect("/incoming");
+return Astro.redirect('/');
 ---
 
 <Layout>
