--- a/src/components/organisms/layout/Layout.astro
+++ b/src/components/organisms/layout/Layout.astro
@@ -5,7 +5,6 @@ import Header from '~/components/organisms/Header.astro';
 import ScrollUp from '~/components/atoms/ScrollUp.svelte';
 import Splash from '~/components/organisms/Splash.astro';
 import { seo } from '~/constants/seo';
-import { social } from '~/constants/social';
 import '~/styles/index.css';
 import '~/styles/md.css';
 interface Props {
@@ -23,19 +22,7 @@ const { generator, site, url } = Astro;
 const image = new URL('social.jpg', site);
 const canonical = new URL(url.pathname, site);
 
-const schema = JSON.stringify(
-  {
-    '@context': 'http://schema.org',
-    '@type': 'LocalBusiness',
-    name: title,
-    description: description,
-    image: image,
-    url: canonical,
-    sameAs: [social.facebook, social.instagram],
-  },
-  null,
-  2
-);
+const schema = JSON.stringify(seo.schema({ image, canonical }), null, 2);
 ---
 
 <!DOCTYPE html>
@@ -58,6 +45,9 @@ const schema = JSON.stringify(
     <meta property="og:image" content={image} />
     <meta property="og:url" content={site} />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content={seo.title} />
+    <meta name="twitter:description" content={seo.description} />
+    <meta name="twitter:image" content={url} />
     <script type="application/ld+json" set:html={schema} />
 
     <script
