feat(seo): replace index by incoming page

--- a/src/components/organisms/layout/Layout.astro
+++ b/src/components/organisms/layout/Layout.astro
@@ -30,7 +30,7 @@ const schema = JSON.stringify(seo.schema({ image, canonical }), null, 2);
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/favicon.ico" type="image/ico" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="generator" content={generator} />
     <meta name="robots" content={index ? 'index' : 'noindex'} />
     <title>{title}</title>
