--- a/src/components/organisms/Products.astro
+++ b/src/components/organisms/Products.astro
@@ -27,7 +27,7 @@ const products = [
     </h2>
   </Fragment>
   <ul
-    class="flex w-full flex-col items-center justify-center gap-24 md:flex-row md:px-8"
+    class="flex w-full flex-col items-center justify-center gap-24 sm:flex-row sm:px-8"
   >
     {
       products.map((_) => (
