--- a/src/components/organisms/Services.astro
+++ b/src/components/organisms/Services.astro
@@ -31,7 +31,7 @@ const services: Array<Service> = [
       Services
     </h2>
   </Fragment>
-  <ul class="grid max-w-6xl grid-cols-1 md:grid-cols-2">
+  <ul class="grid max-w-6xl grid-cols-1 sm:grid-cols-2">
     {
       services.map(({ title, description, icon }, i ) => (
         <li class=`flex flex-col items-center gap-4 p-6 ${services.length % 2 !== 0 && i === services.length -1 ? "sm:col-span-2 sm:mx-auto" : ""}`>
