--- a/src/components/organisms/Splash.astro
+++ b/src/components/organisms/Splash.astro
@@ -1,9 +1,9 @@
 ---
-import HeroImage from "~/components/atoms/HeroImage.astro";
-import ScheduleTemplate from "~/components/molecules/Schedule.svelte";
-import Contact from "~/components/molecules/Contact.svelte";
-import { schedule } from "~/constants/schedule";
-import FindUs from "~/components/molecules/FindUs.svelte";
+import HeroImage from '~/components/atoms/HeroImage.astro';
+import ScheduleTemplate from '~/components/molecules/Schedule.svelte';
+import Contact from '~/components/molecules/Contact.svelte';
+import { schedule } from '~/constants/schedule';
+import FindUs from '~/components/molecules/FindUs.svelte';
 ---
 
 <section class="relative h-full bg-black py-32">
@@ -20,7 +20,7 @@ import FindUs from "~/components/molecules/FindUs.svelte";
       </div>
     </h2>
 
-    <div class="flex max-w-xl flex-col gap-4 sm:max-w-3xl sm:flex-row">
+    <div class="flex max-w-xl flex-col gap-4 sm:mx-8 sm:max-w-3xl sm:flex-row">
       <ScheduleTemplate {schedule} client:idle />
       <FindUs />
       <Contact />
