--- a/src/components/organisms/Team.astro
+++ b/src/components/organisms/Team.astro
@@ -1,24 +1,24 @@
 ---
-import { register } from "swiper/element/bundle";
-import ContentSection from "~/components/molecules/ContentSection.astro";
-import Person from "~/components/molecules/Person.astro";
+import { register } from 'swiper/element/bundle';
+import ContentSection from '~/components/molecules/ContentSection.astro';
+import Person from '~/components/molecules/Person.astro';
 register();
 
 const team = [
   {
-    name: "Cécile",
-    role: "Co-Fondatrice",
+    name: 'Cécile',
+    role: 'Co-Fondatrice',
     description:
-      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae eros quis nisl aliquam aliquet. Sed vitae eros quis nisl aliquam aliquet.",
-    imageUrl: "https://source.unsplash.com/random/256x192?hairdresser,female",
+      'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae eros quis nisl aliquam aliquet. Sed vitae eros quis nisl aliquam aliquet.',
+    imageUrl: 'https://source.unsplash.com/random/256x192?hairdresser,female',
   },
   {
-    name: "Séverine",
-    role: "Co-Fondatrice",
+    name: 'Séverine',
+    role: 'Co-Fondatrice',
     description:
-      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae eros quis nisl aliquam aliquet. Sed vitae eros quis nisl aliquam aliquet.",
+      'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae eros quis nisl aliquam aliquet. Sed vitae eros quis nisl aliquam aliquet.',
     imageUrl:
-      "https://source.unsplash.com/random/256x192?hairdresser,female,joy,bw",
+      'https://source.unsplash.com/random/256x192?hairdresser,female,joy,bw',
   },
 ];
 ---
@@ -30,7 +30,7 @@ const team = [
     </h2>
   </Fragment>
   <ul
-    class="flex w-full flex-col items-center justify-center gap-24 md:flex-row"
+    class="flex w-full flex-col items-center justify-center gap-24 sm:flex-row"
   >
     {
       team.map(({ name, role, imageUrl, description }) => (
