feat(seo): seo improvments

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,9 @@ export const prerender = true;
     <link rel="canonical" href={canonical} />
 
     <!-- social media -->
-    <meta property="og:title" content={title} />
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:site_name" content={title} />
+    <meta property="og:title" content="SC-Coiffure" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content={description} />
     <meta property="og:image" content={image} />
