--- a/packages/site/src/pages/index.astro
+++ b/packages/site/src/pages/index.astro
@@ -6,6 +6,8 @@ import Layout from '~/components/organisms/layout/Layout.astro';
 import '~/styles/index.css';
 import Reviews from '~/components/organisms/Reviews.astro';
 import Products from '~/components/organisms/Products.astro';
+import Gallery from '~/components/organisms/Gallery.astro';
+import GoogleMap from '~/components/organisms/GoogleMap.astro';
 export const prerender = false;
 ---
 
@@ -14,4 +16,6 @@ export const prerender = false;
   <Services />
   <Products />
   <Reviews />
+  <Gallery />
+  <GoogleMap />
 </Layout>
