feat(redirects): remove prerendering

--- a/packages/site/src/pages/404.astro
+++ b/packages/site/src/pages/404.astro
@@ -1,10 +1,15 @@
 ---
 import Link from '~/components/atoms/Link.svelte';
 import Layout from '~/components/organisms/layout/Layout.astro';
-export const prerender = true;
+export const prerender = false;
 ---
 
-<Layout>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; URL='/'" />
+  </head>
+  <body></body>
+  <!-- <Layout>
   <article class="flex flex-col gap-8 p-10">
     <p class="text-default text-center text-xl">
       Nous sommes désolés, mais la page que vous recherchez semble introuvable.
@@ -20,4 +25,5 @@ export const prerender = true;
       </div>
     </Link>
   </article>
-</Layout>
+</Layout> -->
+</html>
