--- a/packages/site/src/components/molecules/SocialList.astro
+++ b/packages/site/src/components/molecules/SocialList.astro
@@ -1,6 +1,6 @@
 ---
-import { Icon } from "astro-icon";
-import type { FooterLink } from "~/types";
+import { Icon } from 'astro-icon';
+import type { FooterLink } from '~/types';
 interface Props {
   links: Array<FooterLink>;
 }
@@ -14,6 +14,8 @@ const { links } = Astro.props;
         <a
           class="flex h-14 w-14 items-center justify-center rounded-full border-2 border-current p-3"
           href={link.url}
+          target="_blank"
+          rel="noopener, noreferrer"
         >
           <span class="sr-only">{link.description}</span>
           <Icon class="h-full" name={link.icon} />
