--- a/packages/site/src/components/atoms/HeroImage.astro
+++ b/packages/site/src/components/atoms/HeroImage.astro
@@ -1,8 +1,8 @@
 ---
-import { Image } from "astro:assets";
-import hero from "~/assets/hero.jpg";
+import { Image } from 'astro:assets';
+import hero from '../../assets/hero.jpg';
 
-const sizes = "100vw";
+const sizes = '100vw';
 ---
 
 <Image
