feat: pkg upgrades

--- a/packages/site/src/pages/index.astro
+++ b/packages/site/src/pages/index.astro
@@ -8,7 +8,7 @@ import Reviews from '~/components/organisms/Reviews.astro';
 import Products from '~/components/organisms/Products.astro';
 import Gallery from '~/components/organisms/Gallery.astro';
 import GoogleMap from '~/components/organisms/GoogleMap.astro';
-export const prerender = false;
+export const prerender = true;
 ---
 
 <Layout>
