--- a/packages/site/src/components/atoms/HeroImage.astro
+++ b/packages/site/src/components/atoms/HeroImage.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import hero from '../../assets/hero.jpg';
+import hero from '~/assets/hero.jpg';
 
 const sizes = '100vw';
 ---
