--- a/packages/site/src/components/organisms/layout/Layout.astro
+++ b/packages/site/src/components/organisms/layout/Layout.astro
@@ -26,7 +26,7 @@ const schema = JSON.stringify(seo.schema({ image, canonical }), null, 2);
 ---
 
 <!DOCTYPE html>
-<html lang="fr" class="h-full font-display motion-safe:scroll-smooth">
+<html lang="fr" class="font-display h-full motion-safe:scroll-smooth">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -57,19 +57,19 @@ const schema = JSON.stringify(seo.schema({ image, canonical }), null, 2);
       defer></script>
 
     <script async defer>
-    if (
-      localStorage.theme === 'dark' ||
-      (!('theme' in localStorage) &&
-        window.matchMedia('(prefers-color-scheme: dark)').matches)
-    ) {
-      document.documentElement.classList.add('dark');
-    } else {
-      document.documentElement.classList.remove('dark');
-    }
+      if (
+        localStorage.theme === 'dark' ||
+        (!('theme' in localStorage) &&
+          window.matchMedia('(prefers-color-scheme: dark)').matches)
+      ) {
+        document.documentElement.classList.add('dark');
+      } else {
+        document.documentElement.classList.remove('dark');
+      }
     </script>
   </head>
   <body
-    class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white"
+    class="bg-default text-default selection:bg-secondary h-full overflow-x-hidden text-base selection:text-white"
   >
     <Header />
     <Splash />
