--- a/packages/site/src/components/organisms/Footer.astro
+++ b/packages/site/src/components/organisms/Footer.astro
@@ -27,6 +27,8 @@ const links: Array<FooterLink> = [
     icon: 'mdi:phone',
   },
 ];
+
+const currentYear = new Date().getFullYear()
 ---
 
 <footer
@@ -36,7 +38,7 @@ const links: Array<FooterLink> = [
     class="absolute inset-0 flex flex-col items-center justify-center overflow-hidden"
   >
     <div class="absolute bottom-4 px-6 text-center text-xs">
-      <p>{companyName} © 2023Tous droits réservés</p>
+      <p>{companyName} © {currentYear} Tous droits réservés</p>
       <Link href="/legal#content">Mentions Légales</Link> -
       <Link href="/privacy#content">Politique de confidentialité</Link>
     </div>
