--- a/packages/site/src/components/organisms/Intro.astro
+++ b/packages/site/src/components/organisms/Intro.astro
@@ -51,12 +51,12 @@ const ctas: CTAElement[] = [
   <div class="container">
     <div class="flex flex-col items-center gap-4">
       <p class="text-text max-w-xl text-center text-sm">
-        Adoptez la SC attitude et <span class="text-accent">sublimez</span>
-        votre style. Avec <span class="text-accent">chaleur et expertise</span>,
-        Séverine et Cécile vous accueillent dans leur salon installé sur le <span
-          class="text-accent">port</span
-        >
-        de La Seyne-sur-Mer.
+        Adoptez la <span class="text-accent">SC attitude</span> pour sublimer votre
+        style ! Séverine et Cécile vous accueillent chaleureusement dans leur salon,
+        situé sur le port de
+        <span class="text-accent">La Seyne-sur-Mer</span>, alliant <span
+          class="text-accent">expertise</span
+        > et <span class="text-accent">convivialité</span>. 
       </p>
     </div>
   </div>
