--- a/packages/site/src/components/organisms/layout/Layout.astro
+++ b/packages/site/src/components/organisms/layout/Layout.astro
@@ -33,6 +33,7 @@ const schema = JSON.stringify(seo.schema({ image, canonical }), null, 2);
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="generator" content={generator} />
     <meta name="robots" content={index ? 'index' : 'noindex'} />
+    <link rel="preconnect" href="https://ka-f.fontawesome.com" />
     <title>{title}</title>
 
     <meta name="description" content={description} />
