--- a/packages/site/src/pages/index.astro
+++ b/packages/site/src/pages/index.astro
@@ -8,6 +8,7 @@ import Reviews from '~/components/organisms/Reviews.astro';
 import Products from '~/components/organisms/Products.astro';
 import Gallery from '~/components/organisms/Gallery.astro';
 import GoogleMap from '~/components/organisms/GoogleMap.astro';
+import Prices from '~/components/organisms/Prices.astro';
 export const prerender = true;
 ---
 
@@ -15,7 +16,8 @@ export const prerender = true;
   <Intro />
   <Services />
   <Products />
-  <Reviews />
+  <Prices />
   <Gallery />
+  <Reviews />
   <GoogleMap />
 </Layout>
