--- a/packages/site/src/components/organisms/Intro.astro
+++ b/packages/site/src/components/organisms/Intro.astro
@@ -53,8 +53,9 @@ const ctas: CTAElement[] = [
     <div class="flex flex-col items-center gap-4">
       <p class="text-text max-w-xl text-center text-sm">
         Adoptez la <span class="text-accent">SC attitude</span> pour sublimer votre
-        style ! Séverine et Cécile vous accueillent chaleureusement dans leur salon,
-        situé sur le port de
+        style ! Séverine et Cécile vous accueillent <span class="text-accent"
+          >chaleureusement</span
+        > dans leur salon de coiffure, situé sur le port de
         <span class="text-accent">La Seyne-sur-Mer</span>, alliant <span
           class="text-accent">expertise</span
         > et <span class="text-accent">convivialité</span>.
