--- a/packages/site/src/components/organisms/Prices.astro
+++ b/packages/site/src/components/organisms/Prices.astro
@@ -11,18 +11,18 @@ const [_categoryName, prices] = categories.introPrices;
      Nos tarifs
     </h2>
   </Fragment>
-  
-   
-
-
+  <div class="text-xs text-center px-8  text-primary dark:text-secondary">
+  <p >Chez SC Coiffure,  nous créons des coupes sur mesure selon vos préférences de longueur. </p>
+   <p class="mt-2">
+    Optez pour le court, le mi-long, ou le long, et découvrez la coupe parfaite qui reflète votre style unique dans nos tarifs</p>
+  </div>
   <ul class="grid max-w-6xl grid-cols-1 sm:grid-cols-2">
     {prices.map((price, i) => 
     <li
       class=`flex flex-col items-center gap-4 p-6 ${prices.length % 2 !== 0 && i === prices.length -1 ? "sm:col-span-2 sm:mx-auto" : ""}`
     >
     <Price client:load {price} />
-    </li>
-)}
+    </li>)}
   </ul>
 
   <span class="text-xs text-center text-offset">
